# BHT-BHTE

./: .gitignore  CURRENT_WORK.md  LICENSE  PRODUCTION_TASKS.md  README.md  download_qt6.bat  fix_msys2.bat  install_qt6_msys2.bat  install_qt6_now.bat  install_qt_minimal.bat  install_qt_official.bat
BHC/: CMakeLists.txt  CMakeLists_simple.txt  build.sh  build_msvc.bat  build_msvc.ps1  build_windows.bat  compile_standalone.bat
BHC/src/: Makefile.am.patch  chainparams.cpp  chainparams.h  pow.cpp  pow.h  type_bridge.h
BHC/src/crypto/: mldsa.cpp  mldsa.h  mldsa_fips204.h  progpow.cpp  progpow.h
BHC/src/script/: hybrid_sig.cpp  hybrid_sig.h  withdrawal_script.cpp  withdrawal_script.h
BHC/src/test/: crypto_tests.cpp  mldsa_tests.cpp
BHC/tools/: bhc_hybrid_test.py  genesis_generator.py  mldsa_fips204_selftest.cpp  standalone_test.cpp  standalone_test_msvc.cpp
BHTE/: .gitignore  README.md  bhc_integration.go  bhc_test.go  go.mod  go.sum  run_tests.ps1  测试报告.md
BHTE/cmd/geth/: main.go  main_test.go
BHTE/config/: mainnet.yaml
BHTE/consensus/bhc/: anchor.go  state_channel.go
BHTE/consensus/bhc/anchor/: state_anchor.go
BHTE/consensus/bhc/channelnetwork/: channel_network.go
BHTE/consensus/bhc/coordinator/: coordinator.go
BHTE/consensus/bhc/proxy/: auxpow.go
BHTE/contracts/: BHTEsettlement.sol  compile.js  package-lock.json  package.json
BHTE/contracts/test/: BHTEsettlement_test.sol
BHTE/core/: bhte_evm.go  config.go
BHTE/core/bhc/: config.go
BHTE/core/bhc_observer/: bhc_observer.go  bhc_observer_test.go
BHTE/core/vm/: contracts_mldsa.go  gas_regulator.go  opcode_pruning.md  opcodes_kernel.go
BHTE/hardware/: hardware_wallet.go  hid.go  manager.go
BHTE/mldsa/: mldsa.go  mldsa_core.go  mldsa_ntt_test.go  mldsa_test.go
BHTE/spv/: spv_bridge.go  spv_bridge_test.go
BHTE/test/: mainnet_deployment_checklist.py  merge_mining_test.py  mldsa_integration_test.go  observer_integration_test.py  security_audit.py  testnet_deployment_test.py  wallet_mining_test.py
BHTE/wallet/: hardware_integration.go  wallet.go
BHTWalletPro/: BHTWalletPro.sln  BHTWalletPro.vcxproj  CMakeLists.txt  README.md  build.bat  build_now.ps1
BHTWalletPro/src/config/: networkconfig.cpp  networkconfig.h
BHTWalletPro/src/crypto/: mldsa_signer.cpp  mldsa_signer.h
BHTWalletPro/src/hardware/: hardware_wallet.cpp  hardware_wallet.h
BHTWalletPro/src/layer2/: layer2_client.cpp  layer2_client.h
BHTWalletPro/src/qt/: addressbookpage.cpp  addressbookpage.h  bhtwalletgui.h  bitcoingui.cpp  bitcoingui.h  clientmodel.cpp  clientmodel.h  main.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  receivecoinsdialog.cpp  receivecoinsdialog.h  sendcoinsdialog.cpp  sendcoinsdialog.h  transactionrecord.cpp  transactionrecord.h  transactionview.cpp  transactionview.h  walletmodel.cpp  walletmodel.h
BHTWalletPro/src/qt/resources/: bht.qrc  bht.rc  bitcoin.rc
BHTWalletPro/src/wallet/: crypter.h  types.h  wallet.cpp  wallet.h  walletdb.h
开发/: 1.md  BHC集成说明.md  BHTE_zkEVM裁剪规范.md  BHT_Wallet开发计划.md  Windows编译环境设置.md  安全审计准备.md  安全审计报告.md  开发.md  编译环境指南.md  进度记录.md  钱包集成文档.md  集成测试计划.md  项目结构.md
